--- a/test.html
+++ b/test.html
@@ -8,5 +8,7 @@
 
 <body>
 <iframe width="1000" height="800" scrolling="no" frameborder="no" src="https://fusiontables.google.com/embedviz?q=select+col8+from+1rW4iXWiN8dJE4uz8Z0sQYOQcdhx-fO2fmBQ-A--x&amp;viz=MAP&amp;h=false&amp;lat=47.55675451233284&amp;lng=-115.82042140048361&amp;t=1&amp;z=12&amp;l=col8&amp;y=2&amp;tmplt=2&amp;hml=ONE_COL_LAT_LNG"></iframe>
-</body>
+
+  <iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1ywrfQejmFb0mtiHIOZME7KVGd5fmOZpe6BkzOEtP2tM&font=Default&lang=en&initial_zoom=2&height=650' width='100%' height='650' webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0'></iframe>
+  </body>
 </html>
