and a story map
this page is iframe-tastic

--- a/test.html
+++ b/test.html
@@ -10,5 +10,8 @@
 <iframe width="1000" height="800" scrolling="no" frameborder="no" src="https://fusiontables.google.com/embedviz?q=select+col8+from+1rW4iXWiN8dJE4uz8Z0sQYOQcdhx-fO2fmBQ-A--x&amp;viz=MAP&amp;h=false&amp;lat=47.55675451233284&amp;lng=-115.82042140048361&amp;t=1&amp;z=12&amp;l=col8&amp;y=2&amp;tmplt=2&amp;hml=ONE_COL_LAT_LNG"></iframe>
 
   <iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1ywrfQejmFb0mtiHIOZME7KVGd5fmOZpe6BkzOEtP2tM&font=Default&lang=en&initial_zoom=2&height=650' width='100%' height='650' webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0'></iframe>
+  
+  <iframe width="100%" height="800px" src="http://uidaho.maps.arcgis.com/apps/Cascade/index.html?appid=8d96ee5eaab64a9a995b40ab20708f4a" frameborder="0" scrolling="no"></iframe>
+  
   </body>
 </html>
